[package]
name = "voc-dataset"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
minidom = "~0.11"
glob = "~0.3"
failure = "~0.1"
log = "~0.4"

[dev-dependencies]
pretty_env_logger = "~0.3"
tempdir = "~0.3"
reqwest = "~0.9"
rust-crypto = "~0.2"
tar = "~0.4"
