[package]
name = "voc-dataset"
version = "0.2.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

description = "Simple data loader for The PASCAL Visual Object Classes (VOC)"
homepage = "https://github.com/jerry73204/voc-dataset-rs"
repository = "https://github.com/jerry73204/voc-dataset-rs"
documentation = "https://docs.rs/voc-dataset/"
keywords = ["dataset", "VOC"]
categories = ["science"]
license-file = "LICENSE.txt"
readme = "README.md"

[dependencies]
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
serde-xml-rs = "0.4"
serde = { version = "1.0", features = ["derive"] }
noisy_float = { version = "0.1", features = ["serde-1"] }

[dev-dependencies]
pretty_env_logger = "0.4"
tempdir = "0.3"
reqwest = { version = "0.10", features = ["blocking"] }
rust-crypto = "0.2"
tar = "0.4"
