[package]
name = "voc-dataset"
version = "0.3.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

description = "Simple data loader for The PASCAL Visual Object Classes (VOC)"
homepage = "https://github.com/jerry73204/voc-dataset-rs"
repository = "https://github.com/jerry73204/voc-dataset-rs"
documentation = "https://docs.rs/voc-dataset/"
keywords = ["dataset", "VOC"]
categories = ["science"]
license = "MIT"
readme = "README.md"

[dependencies]
log = "0.4.14"
anyhow = "1.0.40"
thiserror = "1.0.24"
serde-xml-rs = "0.4.1"
serde = { version = "1.0.125", features = ["derive"] }
noisy_float = { version = "0.2.0", features = ["serde"] }

[dev-dependencies]
pretty_env_logger = "0.4.0"
tempdir = "0.3.7"
reqwest = { version = "0.11.2", features = ["blocking"] }
rust-crypto = "0.2.36"
tar = "0.4.33"
